--- a/index.html
+++ b/index.html
@@ -16,33 +16,37 @@
 </head>
 
 <body>
-<main class="profile-card">
-  <div class="profile-bg">
-<img src="images/bg-pattern-card.svg" alt="card background" class="bubbles-bg">
-  </div>
-  <div class="card-content">
-    <img src="images/image-victor.jpg" alt="victor profile pic">
-    <h1 class="username">Victor Crest <span class="gray-text">26</span></h1>
-    <p class="residence">London</p>
-    <hr class="line">
-    <div class="stats-container">
-      <div class="followers">
-        <h2>80K</h2>
-        <p>Followers</p>
-      </div>
+  <main class="profile-card">
+    <div class="profile-bg">
+      <img src="images/bg-pattern-card.svg" alt="card background" class="bubbles-bg">
+    </div>
+    <div class="card-content">
+      <img src="images/image-victor.jpg" alt="victor profile pic">
+      <h1 class="username">Victor Crest <span class="gray-text">26</span></h1>
+      <p class="residence">London</p>
+      <hr class="line">
+      <div class="stats-container">
+        <div class="followers">
+          <h2>80K</h2>
+          <p>Followers</p>
+        </div>
 
-      <div class="likes">
-        <h2>803K</h2>
-        <p> Likes</p>
-      </div>
+        <div class="likes">
+          <h2>803K</h2>
+          <p> Likes</p>
+        </div>
 
-      <div class="photos">
-        <h2>1.4K</h2>
-        <p>Photos</p>
+        <div class="photos">
+          <h2>1.4K</h2>
+          <p>Photos</p>
+        </div>
       </div>
     </div>
-  </div>
-</main>
+  </main>
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/Valhalla-2">Valhalla</a>.
+  </footer>
 </body>
 
 </html>
